--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="true"> <img src="assets/foto luis.jpg">
   <ion-toolbar>
     <ion-title>
       Blank
@@ -12,9 +12,10 @@
       <ion-title size="large">Blank</ion-title>
     </ion-toolbar>
   </ion-header>
+  
 
   <div id="container">
-    <strong>Ready to create an app?</strong>
+    <strong>Luis Antonio Dias de Oliveira turma:ADS0304N</strong>
     <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
   </div>
 </ion-content>
